fix: fix docker file name in Build Docker Image of ci-cd.yaml file

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -52,5 +52,5 @@ jobs:
         run: |
           docker build \
           -t prod-requirements:${{ github.sha }} \
-          -f docker/prod-requirements.Dockerfile \
+          -f docker/llmfromscratch.Dockerfile \
           .
