feat: add key and value for directory after splitting data in data processing config file

--- a/config/data_processing.yaml
+++ b/config/data_processing.yaml
@@ -1,5 +1,6 @@
 raw_epub_dir: "./data/01-raw/"
 processed_dir: "./data/02-preprocessed/"
+dataset_dir: "./data/03-datasets/"
 exclude_files: [
     "titlepage.xhtml",
     "toc.html",
